# jade-lab

./: .editorconfig  .gitignore  .gitmodules  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml
cookbook/cpp/: CMakeLists.txt  CMakePresets.json  README.md
cookbook/cpp/algorithms/graph/: graph.cpp
cookbook/cpp/algorithms/searching/: binary_search.cpp
cookbook/cpp/data-structures/disjoint-set/: disjoint_set.cpp
cookbook/cpp/data-structures/heap/: heap.cpp
cookbook/cpp/data-structures/linked-list/: linked_list.cpp
cookbook/cpp/data-structures/trie/: trie.cpp
cookbook/go/: README.md  go.mod
cookbook/go/language/interfaces-and-embedding/: main.go
cookbook/java/: README.md  pom.xml
cookbook/java/src/main/java/org/example/dynamic/c86/: ServiceA.java
cookbook/java/src/main/java/org/example/dynamic/c87/: HelloImpl.java  HotDeployDemo.java  MyClassLoader.java  MyClassLoaderDemo.java
cookbook/python/: README.md  pyproject.toml
cookbook/python/algorithms/graph/: graph.py
cookbook/python/data-structures/linked-list/: reverse.py
cookbook/python/data-structures/stack/: monotone_stack.py
cookbook/python/data-structures/tree/: builder.py  segment_tree.py
cookbook/python/language/concurrency/: asyncio_demo.py
docs/: roadmap.md
docs/adr/: 0001-content-oriented-module-boundaries.md
docs/open-source/: 500lines.md  algorithmbasic2020.md  algorithms.md  codeforces-go.md  guava.md
docs/project/: conventions.md  maintenance.md  structure.md
labs/databases/redis-sandbox/: .env.example  README.md  docker-compose.yml
labs/frameworks/java/mapstruct/: README.md  pom.xml
labs/frameworks/java/mybatis/: README.md  pom.xml
labs/frameworks/java/mybatis/src/main/resources/: mybatis-config.xml
labs/frameworks/java/spring-web/: README.md  pom.xml
labs/frameworks/python/pydantic/: README.md  pyproject.toml
labs/networking/java-concurrent-http/: README.md  pom.xml
labs/networking/python-socket-server/: README.md  pyproject.toml
labs/numerical-computing/numpy/: README.md  pyproject.toml
labs/observability/python/: README.md  pyproject.toml
labs/scheduling/distributed-timer/: README.md  pyproject.toml
labs/scheduling/local-timer/: README.md  pyproject.toml
labs/storage/btree/: README.md  pyproject.toml
labs/storage/btree/tests/: test_btree.py
labs/storage/skip-list/: README.md  pyproject.toml
problems/leetcode/: .gitignore  README.md  leetgo.yaml  pyproject.toml
references/: README.md
studies/: README.md
tools/process-inspector/: README.md  pyproject.toml
tools/process-inspector/scripts/: thread-count.sh
tools/process-inspector/src/process_inspector/: __init__.py  __main__.py  cli.py  core.py
tools/process-inspector/tests/: test_core.py
(+2 files in other folders)
