[project]
name = "leetcode-solutions"
version = "0.1.0"
description = "使用 leetgo 管理的多语言 LeetCode 题解"
requires-python = ">=3.12,<3.15"
dependencies = [
    "leetgo-py==0.2.4",
    "sortedcontainers==2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "RUF"]
ignore = ["E501", "F403", "F405"]
