[project]
name = "btree-lab"
version = "0.1.0"
description = "B-Tree 插入与遍历实验"
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
