[project]
name = "skip-list-lab"
version = "0.1.0"
description = "Skip List 结构实验"
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
